--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "php": ">=5.4",
         "tenolo/core-bundle": "dev-master",
         "tenolo/admin-bundle": "dev-master",
+        "tenolo/doctrine-table-prefix-bundle": "dev-master",
         "symfony/framework-bundle": "~2.4",
         "symfony/twig-bundle": "~2.4"
     },
