--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=5.4",
         "tenolo/core-bundle": "dev-master",
-        "tenolo/admin-bundle": "dev-master",
+        "tenolo/admin-control-panel-bundle": "dev-master",
         "symfony/framework-bundle": "~2.4",
         "symfony/twig-bundle": "~2.4"
     },
