--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,7 @@
 parameters:
     tenolo_translation.service.class: Tenolo\TranslationBundle\Service\TranslationService
     tenolo_translation.database_loader.class: Tenolo\TranslationBundle\Translation\Loader\DatabaseLoader
+    tenolo_translation.twig_template_event.event.admin.class: Tenolo\TranslationBundle\EventListener\TwigTemplateEventListener
 
 services:
     tenolo_translation.service:
@@ -12,3 +13,10 @@ services:
         arguments: ["@service_container"]
         tags:
             - { name: translation.loader, alias: db }
+
+    # twig events
+    tenolo_translation.twig_template_event.event.admin:
+        class: %tenolo_translation.twig_template_event.event.admin.class%
+        arguments: [@service_container]
+        tags:
+            - { name: kernel.event_listener, event: twig.template.event, method: onTemplateEvent }
