--- a/composer.json
+++ b/composer.json
@@ -22,18 +22,22 @@
         "symfony/framework-bundle": "~2.4",
         "symfony/twig-bundle": "~2.4",
 
-        "tenolo/core-bundle": "dev-develop",
-        "tenolo/doctrine-table-prefix-bundle": "dev-develop",
-        "tenolo/admin-control-panel-bundle": "dev-develop"
+        "tenolo/core-bundle": "1.0.*@dev",
+        "tenolo/doctrine-table-prefix-bundle": "1.0.*@dev",
+        "tenolo/admin-control-panel-bundle": "1.0.*@dev"
     },
     "require-dev": {
         "symfony/assetic-bundle": "~2.3",
         "phpunit/phpunit": "~4.3"
     },
     "autoload": {
-        "psr-0": {
-            "Tenolo\\Bundle\\TranslationBundle": ""
+        "psr-4": {
+            "Tenolo\\Bundle\\TranslationBundle\\": ""
         }
     },
-    "target-dir": "Tenolo/Bundle/TranslationBundle"
+    "extra": {
+        "branch-alias": {
+            "dev-develop": "1.0-dev"
+        }
+    }
 }
