--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,30 @@
     "require": {
         "php": ">=5.4",
 
-        "symfony/framework-bundle": "~2.4",
-        "symfony/twig-bundle": "~2.4",
+        "symfony/http-kernel": "~2.7",
+        "symfony/config": "~2.7",
+        "symfony/dependency-injection": "~2.7",
+        "symfony/form": "~2.7",
+        "symfony/validator": "~2.7",
+        "symfony/event-dispatcher": "~2.7",
+        "symfony/translation": "~2.7",
+        "symfony/routing": "~2.7",
+        "symfony/http-foundation": "~2.7",
+        "symfony/options-resolver": "~2.7",
+        "symfony/twig-bundle": "~2.7",
+
+        "doctrine/orm": "~2.5",
+        "doctrine/common": "~2.5",
+
+        "shapecode/repository-as-a-service": "~1.0",
 
         "tenolo/core-bundle": "1.0.*@dev",
-        "tenolo/doctrine-table-prefix-bundle": "1.0.*@dev",
+        "tenolo/doctrine-table-prefix-bundle": "~1.0",
         "tenolo/admin-control-panel-bundle": "1.0.*@dev"
     },
     "require-dev": {
-        "symfony/assetic-bundle": "~2.3",
-        "phpunit/phpunit": "~4.3"
+        "symfony/assetic-bundle": "~2.6",
+        "phpunit/phpunit": "~4.7"
     },
     "autoload": {
         "psr-4": {
