--- a/composer.json
+++ b/composer.json
@@ -17,32 +17,33 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
+        "php": ">=5.6",
 
-        "symfony/http-kernel": "~2.7",
-        "symfony/config": "~2.7",
-        "symfony/dependency-injection": "~2.7",
-        "symfony/form": "~2.7",
-        "symfony/validator": "~2.7",
-        "symfony/event-dispatcher": "~2.7",
-        "symfony/translation": "~2.7",
-        "symfony/routing": "~2.7",
-        "symfony/http-foundation": "~2.7",
-        "symfony/options-resolver": "~2.7",
-        "symfony/twig-bundle": "~2.7",
+        "symfony/http-kernel": "~2.8|~3.0",
+        "symfony/config": "~2.8|~3.0",
+        "symfony/dependency-injection": "~2.8|~3.0",
+        "symfony/form": "~2.8|~3.0",
+        "symfony/validator": "~2.8|~3.0",
+        "symfony/event-dispatcher": "~2.8|~3.0",
+        "symfony/translation": "~2.8|~3.0",
+        "symfony/routing": "~2.8|~3.0",
+        "symfony/http-foundation": "~2.8|~3.0",
+        "symfony/options-resolver": "~2.8|~3.0",
+        "symfony/twig-bundle": "~2.8|~3.0",
 
         "doctrine/orm": "~2.5",
-        "doctrine/common": "~2.5",
+        "doctrine/common": "~2.6",
 
-        "shapecode/repository-as-a-service": "~1.0",
+        "shapecode/repository-as-a-service": "~1.2",
 
         "tenolo/core-bundle": "1.1.*@dev",
+        "tenolo/menu-bundle": "1.1.*@dev",
         "tenolo/doctrine-table-prefix-bundle": "1.1.*@dev",
         "tenolo/admin-control-panel-bundle": "1.1.*@dev"
     },
     "require-dev": {
-        "symfony/assetic-bundle": "~2.6",
-        "phpunit/phpunit": "~4.7"
+        "symfony/assetic-bundle": "~2.7",
+        "symfony/phpunit-bridge": "~2.8|~3.0"
     },
     "autoload": {
         "psr-4": {
