--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
         "php": ">=5.6",
 
+        "symfony/framework-bundle": "~2.8|~3.0",
         "symfony/http-kernel": "~2.8|~3.0",
         "symfony/config": "~2.8|~3.0",
         "symfony/dependency-injection": "~2.8|~3.0",
@@ -44,6 +45,8 @@
 
         "tenolo/core-bundle": "^2.0@dev",
         "tenolo/menu-bundle": "^2.0@dev",
+        "tenolo/crud-admin-bundle": "~2.0@dev",
+        "tenolo/admin-control-panel-bundle": "~2.0@dev",
         "tenolo/doctrine-table-prefix-bundle": "^2.0@dev"
     },
     "require-dev": {
