--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "tenolo/translation-bundle",
-    "description": "",
+    "description": "Adds a translation manager to teneolo components.",
     "keywords": [
         "translation",
         "database",
@@ -17,11 +17,12 @@
         },
         {
             "name": "Nikita Loges",
-            "email": "nl@tenolo.de"
+            "email": "nl@tenolo.de",
+            "homepage": "http://tenolo.de"
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": "~5.5|~7.0",
 
         "symfony/framework-bundle": "~2.8|~3.0",
         "symfony/http-kernel": "~2.8|~3.0",
