--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
     ],
     "extra": {
         "branch-alias": {
+            "dev-release/1.0": "1.0-dev",
             "dev-release/1.1": "1.1-dev"
         }
     },
