--- a/composer.json
+++ b/composer.json
@@ -44,11 +44,12 @@
 
         "shapecode/repository-as-a-service": "~1.2",
 
-        "tenolo/core-bundle": "^2.0@dev",
-        "tenolo/menu-bundle": "^2.0@dev",
+        "tenolo/core-bundle": "~2.0@dev",
+        "tenolo/menu-bundle": "~2.0@dev",
+        "tenolo/entity-bundle": "~2.0@dev",
         "tenolo/crud-admin-bundle": "~2.0@dev",
         "tenolo/admin-control-panel-bundle": "~2.0@dev",
-        "tenolo/doctrine-table-prefix-bundle": "^2.0@dev",
+        "tenolo/doctrine-table-prefix-bundle": "~2.0@dev",
 
         "mmoreram/symfony-bundle-dependencies": "~1.0"
     },
