--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "doctrine/orm": "~2.5",
         "doctrine/common": "~2.5",
 
-        "shapecode/repository-as-a-service": "~1.0",
+        "shapecode/repository-as-a-service": "~1.0|~2.0",
 
         "tenolo/core-bundle": "~2.0",
         "tenolo/doctrine-table-prefix-bundle": "~2.0",
