--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "tenolo/core-bundle": "~3.0",
         "tenolo/entity-bundle": "~1.0",
 
-        "mmoreram/symfony-bundle-dependencies": "~1.0"
+        "mmoreram/symfony-bundle-dependencies": "~1.0|~2.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "~2.8|~3.0"
