move to new admin bundle

--- a/src/Resources/config/routing.yml
+++ b/src/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-tenolo_translation:
-    resource: "@TenoloTranslationBundle/Controller"
-    type:     annotation
+#tenolo_translation:
+#    resource: "@TenoloTranslationBundle/Controller"
+#    type:     annotation
