--- a/composer.json
+++ b/composer.json
@@ -22,26 +22,23 @@
         }
     ],
     "require": {
-        "php": "~5.4|~7.0",
+        "php": "~5.6|~7.0",
 
-        "symfony/http-kernel": "~2.7",
-        "symfony/config": "~2.7",
-        "symfony/dependency-injection": "~2.7",
-        "symfony/form": "~2.7",
-        "symfony/validator": "~2.7",
-        "symfony/event-dispatcher": "~2.7",
-        "symfony/translation": "~2.7",
-        "symfony/routing": "~2.7",
-        "symfony/http-foundation": "~2.7",
-        "symfony/options-resolver": "~2.7",
-        "symfony/twig-bundle": "~2.7",
-
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
+        "symfony/http-kernel": "~2.8|~3.0|~4.0",
+        "symfony/config": "~2.8|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
+        "symfony/form": "~2.8|~3.0|~4.0",
+        "symfony/options-resolver": "~2.8|~3.0|~4.0",
+        "symfony/translation": "~2.8|~3.0|~4.0",
+        "symfony/doctrine-bridge": "~2.8|~3.0|~4.0",
+        "symfony/filesystem": "~2.8|~3.0|~4.0",
+        "symfony/finder": "~2.8|~3.0|~4.0",
+        
         "doctrine/orm": "~2.5",
         "doctrine/common": "~2.5",
 
-        "tenolo/core-bundle": "~2.0",
-        "tenolo/doctrine-table-prefix-bundle": "~2.0",
-        "tenolo/admin-control-panel-bundle": "~2.0"
+        "tenolo/entity-bundle": "~1.0"
     },
     "autoload": {
         "psr-4": {
