--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "symfony/doctrine-bridge": "~2.8|~3.0|~4.0",
         "symfony/filesystem": "~2.8|~3.0|~4.0",
         "symfony/finder": "~2.8|~3.0|~4.0",
-        
+        "symfony/console": "~2.8|~3.0|~4.0",
+
         "doctrine/orm": "~2.5",
         "doctrine/common": "~2.5",
 
