--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://repo.tenolo.com/repo/private/"
+            "url": "https://repo.tenolo.com/"
         }
     ],
     "extra": {
