--- a/composer.json
+++ b/composer.json
@@ -64,8 +64,7 @@
     "extra": {
         "branch-alias": {
             "dev-release/1.0": "1.0-dev",
-            "dev-release/2.0": "2.0-dev",
-            "dev-release/3.0": "3.0-dev"
+            "dev-master": "2.0-dev"
         }
     },
     "minimum-stability": "dev",
